--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,16 @@
 }
 
 .section-content {
-  max-width: 1100px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 40px;
+  background: white;
+  color: black;
+}
+
+.intro-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 10px;
+  color: black;
 }
