--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,27 @@
   --off-white: #fafafa;
 }
 .nav {
-  background-color: var(--off-white);
+  background-color: blueviolet;
   position: sticky;
   top: 0px;
   width: 100%;
-  height: 80px;
+  height: 60px;
   z-index: 1000;
-  box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.1);
 }
 
 .nav-logo {
-  height: 60px;
-  width: 60px;
+  color: white;
 }
 
 .nav-logo:hover {
+  color: silver;
   cursor: pointer;
+  text-decoration: underline;
 }
 
 .nav .nav-content {
   max-width: 900px;
-  padding: 0rem 3rem;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -33,17 +33,18 @@
 .nav-item {
   display: inline;
   margin-left: 2rem;
-  color: #333;
+  color: white;
 }
 
 .nav-item:hover {
-  color: black;
+  color: silver;
   cursor: pointer;
+  text-decoration: underline;
 }
 
 .section-dark {
-  background: #07575B;
-  color: white;
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
 
 .section {
@@ -60,11 +61,11 @@
 .intro-section {
   display: flex;
   align-items: center;
+  background-color: white;
 }
 
 .intro-content {
   margin: 0 auto;
   padding-top: 10px;
-  color: white;
-  background: rgba(0, 0, 0, 0.7);
+  color: black;
 }
