--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,21 @@
   --off-white: #fafafa;
 }
 .nav {
-  background-color: blueviolet;
+  background-color: rgba(255, 255, 255, 0.5);
   position: sticky;
   top: 0px;
   width: 100%;
   height: 60px;
   z-index: 1000;
-  box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.35);
+  box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.1);
 }
 
 .nav-logo {
-  color: white;
+  color: rebeccapurple;
 }
 
 .nav-logo:hover {
-  color: silver;
+  color: black;
   cursor: pointer;
   text-decoration: underline;
 }
@@ -33,11 +33,11 @@
 .nav-item {
   display: inline;
   margin-left: 2rem;
-  color: white;
+  color: violet;
 }
 
 .nav-item:hover {
-  color: silver;
+  color: black;
   cursor: pointer;
   text-decoration: underline;
 }
@@ -60,8 +60,7 @@
 }
 
 .intro-content {
-  margin: 0 auto;
-  padding-top: 10px;
+  font-family: Arial, Helvetica, sans-serif;
   color: black;
 }
 
@@ -91,4 +90,8 @@
 
 .iconLink:hover {
   color: black;
+}
+
+.card {
+  background: white;
 }
